Don't offer system updates while offline

Discover will start giving errors anyway and there's not much to do.

BUG: 404339